--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -13,24 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.draft == false && (github.event_name == 'workflow_dispatch' || !contains(github.event.head_commit.message, 'noci')) }}
 
-    env:
-      JAVA_HOME: /usr/lib/jvm/java-22-openjdk/
-
     steps:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
-
-    - name: Set up JDK 22
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: |
-          22
-          21
-
-    - name: Set up Gradle
-      uses: gradle/gradle-build-action@v3
+    - uses: cachix/install-nix-action@v27
+    - uses: DeterminateSystems/magic-nix-cache-action@main
+    - uses: nicknovitski/nix-develop@v1
 
     - name: Build debug APK
       run: ./gradlew androidApp:packageDebug
