--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Set up JDK 22
+    - name: Set up JDKs
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
