--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -18,11 +18,13 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Set up JDK 17
+    - name: Set up JDKs
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
         distribution: 'temurin'
+        java-version: |
+          22
+          21
 
     - name: Set up Gradle
       uses: gradle/gradle-build-action@v3
