--- a/gradle.properties
+++ b/gradle.properties
@@ -5,18 +5,22 @@ org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 kotlin.code.style=official
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.enableCInteropCommonization.nowarn=true
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 # Android
 android.useAndroidX=true
 android.compileSdk=34
 android.targetSdk=34
-android.minSdk=23
+android.minSdk=26
 android.nonTransitiveRClass=true
 android.enableR8.fullMode=true
 android.suppressUnsupportedCompileSdk=34
 
 # Plugin versions
 kotlin.version=2.0.0-RC1
-agp.version=8.2.2
+agp.version=8.5.0
 compose.version=1.6.2
 sqldelight.version = 2.0.0
+
+# Nix
+org.gradle.java.installations.fromEnv=JAVA_21_HOME,JAVA_22_HOME
