--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -25,8 +25,10 @@ jobs:
         java-version: |
           22
           21
-
-    - run: echo "PACKAGE_JAVA_HOME=$JAVA_HOME_22_X64" >> $GITHUB_ENV
+    
+    - run: |
+       chcp 65001
+       echo ("PACKAGE_JAVA_HOME=" + $JAVA_HOME_22_X64) >> $env:GITHUB_ENV
     - run: echo $PACKAGE_JAVA_HOME
 
     - name: Set up Gradle
