--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -25,11 +25,19 @@ jobs:
         java-version: |
           22
           21
-    
-    - run: |
-       chcp 65001
-       echo ("PACKAGE_JAVA_HOME=" + $env:JAVA_HOME_22_X64) >> $env:GITHUB_ENV
-    - run: echo $PACKAGE_JAVA_HOME
+
+    - name: Download mpv
+      run: curl -L https://downloads.sourceforge.net/project/mpv-player-windows/libmpv/mpv-dev-x86_64-20240114-git-bd35dc8.7z --output mpv.7z
+
+    - name: Extract mpv
+      shell: bash
+      run: |
+        "/c/Program Files/7-Zip/7z.exe" x mpv.7z -o "mpv"
+
+    - name: Copy libmpv-2.dll
+      run: xcopy /s /i /y "${{ github.workspace }}\mpv\libmpv-2.dll" "${{ github.workspace }}\desktopApp\build\package\windows\"
+
+    - run: dir desktopApp\build\package\windows
 
     - name: Set up Gradle
       uses: gradle/gradle-build-action@v3
