--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -26,6 +26,11 @@ jobs:
           22
           21
 
+    - name: Set PACKAGE_JAVA_HOME
+      run: |
+       chcp 65001
+       echo ("PACKAGE_JAVA_HOME=" + $env:JAVA_HOME_22_X64) >> $env:GITHUB_ENV
+
     - name: Download mpv
       run: curl -L https://downloads.sourceforge.net/project/mpv-player-windows/libmpv/mpv-dev-x86_64-20240114-git-bd35dc8.7z --output mpv.7z
 
@@ -35,7 +40,7 @@ jobs:
         "/c/Program Files/7-Zip/7z.exe" x mpv.7z -o"mpv"
 
     - name: Copy libmpv-2.dll
-      run: xcopy /s /i /y "${{ github.workspace }}\mpv\libmpv-2.dll" "${{ github.workspace }}\desktopApp\build\package\windows\"
+      run: xcopy /s /i /y "${{ github.workspace }}\mpv\libmpv-2.dll" "${{ github.workspace }}\desktopApp\build\package\windows\libmpv.dll"
 
     - run: dir desktopApp\build\package\windows
 
