--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,7 +14,7 @@ jobs:
     if: ${{ github.event.pull_request.draft == false && (github.event_name == 'workflow_dispatch' || !contains(github.event.head_commit.message, 'noci')) }}
 
     env:
-      PACKAGE_JAVA_LIBRARY_PATH: app/resources
+      PACKAGE_JAVA_LIBRARY_PATH: .\app\resources
 
     steps:
     - uses: actions/checkout@v3
