--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,7 +14,7 @@ jobs:
     if: ${{ github.event.pull_request.draft == false && (github.event_name == 'workflow_dispatch' || !contains(github.event.head_commit.message, 'noci')) }}
 
     env:
-      PACKAGE_JAVA_LIBRARY_PATH: .\app\resources
+      PACKAGE_JAVA_LIBRARY_PATH: ./app/resources
 
     steps:
     - uses: actions/checkout@v3
@@ -43,7 +43,7 @@ jobs:
         "/c/Program Files/7-Zip/7z.exe" x mpv.7z -o"mpv"
 
     - name: Copy libmpv-2.dll
-      run: xcopy /s /i /y "${{ github.workspace }}\mpv\libmpv-2.dll" "${{ github.workspace }}\desktopApp\build\package\windows\libmpv.dll*"
+      run: xcopy /s /i /y "${{ github.workspace }}\mpv\libmpv-2.dll" "${{ github.workspace }}\desktopApp\build\package\windows\mpv.dll*"
 
     - run: dir desktopApp\build\package\windows
 
