--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ android.suppressUnsupportedCompileSdk=34
 kotlin.version=2.0.0-RC1
 agp.version=8.5.0
 compose.version=1.6.2
-sqldelight.version = 2.0.0
+sqldelight.version=2.1.0-SNAPSHOT
 
 # Nix
 org.gradle.java.installations.fromEnv=JAVA_21_HOME,JAVA_22_HOME
