wip: Continue WASM support

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,9 @@ android.nonTransitiveRClass=true
 android.enableR8.fullMode=true
 android.suppressUnsupportedCompileSdk=34
 
+# Compose
+org.jetbrains.compose.experimental.wasm.enabled=true
+
 # Plugin versions
 kotlin.version=2.0.0-RC1
 agp.version=8.5.0
