Continue WASM support

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Gradle
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.caching=false
 
 # Kotlin
 kotlin.code.style=official
@@ -21,8 +22,8 @@ org.jetbrains.compose.experimental.wasm.enabled=true
 
 # Plugin versions
 kotlin.version=2.0.0-RC1
-agp.version=8.5.0
-compose.version=1.6.2
+agp.version=8.4.1
+compose.version=1.7.0-alpha01
 sqldelight.version=2.1.0-SNAPSHOT
 
 # Nix
