CI: Build tar and zip instead of appimage and exe

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -29,22 +29,11 @@ jobs:
     - name: Set up Gradle
       uses: gradle/gradle-build-action@v3
 
-    - name: Install desktop-file-utils, appstream
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: desktop-file-utils appstream
+    - name: Build tarball
+      run: ./gradlew desktopApp:packageReleaseTarball
 
-    - name: Download appimagetool
-      run: wget https://github.com/AppImage/appimagetool/releases/download/continuous/appimagetool-x86_64.AppImage -O /usr/local/bin/appimagetool
-
-    - name: Grant execute permission for appimagetool
-      run: chmod +x /usr/local/bin/appimagetool
-
-    - name: Build AppImage
-      run: ./gradlew desktopApp:packageReleaseAppImage
-
-    - name: Upload AppImage artifact
+    - name: Upload tarball artifact
       uses: actions/upload-artifact@v3
       with:
         name: spmp-linux-release
-        path: desktopApp/build/compose/binaries/main-release/appimage/*.appimage
+        path: desktopApp/build/outputs/*.tar.gz
