--- a/gradle.properties
+++ b/gradle.properties
@@ -21,10 +21,10 @@ android.suppressUnsupportedCompileSdk=34
 org.jetbrains.compose.experimental.wasm.enabled=true
 
 # Plugin versions
-kotlin.version=2.0.10-RC2-532
+kotlin.version=2.0.21
 agp.version=8.4.1
 compose.version=1.7.0-dev1731
-sqldelight.version=2.1.0-SNAPSHOT
+sqldelight.version=f363703160
 
 # Nix
 org.gradle.java.installations.fromEnv=JAVA_21_HOME,JAVA_22_HOME
