--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ org.jetbrains.compose.experimental.wasm.enabled=true
 kotlin.version=2.0.21
 agp.version=8.4.1
 compose.version=1.7.0-dev1731
-sqldelight.version=f363703160
+sqldelight.version=2.0.0
 
 # Nix
 org.gradle.java.installations.fromEnv=JAVA_21_HOME,JAVA_22_HOME
