--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ org.jetbrains.compose.experimental.wasm.enabled=true
 # Plugin versions
 kotlin.version=2.0.21
 agp.version=8.4.1
-compose.version=1.7.0-dev1731
+compose.version=1.7.0-rc01
 sqldelight.version=2.0.2
 
 # Nix
