Add SDK v34 to Nix flake

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ android.targetSdk=34
 android.minSdk=26
 android.nonTransitiveRClass=true
 android.enableR8.fullMode=true
-android.suppressUnsupportedCompileSdk=34
+android.suppressUnsupportedCompileSdk=34,35
 
 # Compose
 org.jetbrains.compose.experimental.wasm.enabled=true
