--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -101,7 +101,8 @@
         </activity>
 
         <receiver android:name=".widget.LyricsLineHorizontalWidgetReceiver"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/widget_name_lyrics_line_horizontal_widget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
