--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -112,6 +112,18 @@
             />
         </receiver>
 
+        <receiver android:name=".widget.SongQueueWidgetReceiver"
+            android:exported="true"
+            android:label="@string/widget_name_song_queue">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/song_queue_widget_provider"
+            />
+        </receiver>
+
     </application>
 
 </manifest>
