Use PlayerNotificationManager for notification, restore like button

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -77,23 +77,19 @@
             </intent-filter>
         </service>
 
-        <receiver
-            android:name=".platform.playerservice.PlayerServiceNotificationManager$NotificationDismissReceiver"
-            android:exported="false" />
-
         <service
             android:name=".platform.download.PlayerDownloadService"
             android:exported="false"
             android:foregroundServiceType="dataSync">
         </service>
 
-        <receiver
-            android:name="androidx.media.session.MediaButtonReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MEDIA_BUTTON" />
-            </intent-filter>
-        </receiver>
+<!--        <receiver-->
+<!--            android:name="androidx.media.session.MediaButtonReceiver"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MEDIA_BUTTON" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
 
     </application>
 
