--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -134,6 +134,17 @@
             />
         </receiver>
 
+        <receiver android:name=".widget.SplitImageControlsWidgetReceiver"
+            android:exported="true"
+            android:label="@string/widget_name_split_image_controls">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/split_image_controls_widget_provider"
+                />
+        </receiver>
     </application>
 
 </manifest>
