--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -21,22 +21,38 @@ jobs:
     - uses: DeterminateSystems/magic-nix-cache-action@main
     - uses: nicknovitski/nix-develop@v1
 
-    - name: Build debug APK
-      run: ./gradlew androidApp:packageDebug
+    # - name: Build debug APK
+    #   run: ./gradlew androidApp:packageDebug
     - name: Build release APK
       run: ./gradlew androidApp:packageRelease
 
-    - name: Upload universal debug APK artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: spmp-android-debug
-        path: androidApp/build/outputs/apk/debug/*.apk
+    # - name: Upload universal debug APK artifact
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: spmp-android-debug
+    #     path: androidApp/build/outputs/apk/debug/*.apk
 
-    - name: Upload universal release APK artifact
-      uses: actions/upload-artifact@v3
+    # - name: Upload universal release APK artifact
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: spmp-android-release
+    #     path: androidApp/build/outputs/apk/release/*.apk
+
+    - name: Rename APK files
+      run: mv androidApp/build/outputs/apk/release/*.apk androidApp/build/outputs/apk/release/spmp-nightly-android-universal.apk 
+        # mv androidApp/build/outputs/apk/debug/*.apk androidApp/build/outputs/apk/debug/spmp-nightly-android-universal-debug.apk 
+
+    - name: Get current date and time
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S')"
+
+    - name: Update nightly release
+      uses: johnwbyrd/update-release@v1
       with:
-        name: spmp-android-release
-        path: androidApp/build/outputs/apk/release/*.apk
+        token: ${{ secrets.GITHUB_TOKEN }}
+        release: Nightly ${{ steps.date.outputs.date }}
+        tag: nightly-latest
+        files: androidApp/build/outputs/apk/release/spmp-nightly-android-universal.apk
 
     - name: Get short commit hash
       run: echo "COMMIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
