--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -21,10 +21,10 @@ jobs:
     - uses: DeterminateSystems/magic-nix-cache-action@main
     - uses: nicknovitski/nix-develop@v1
 
-    # - name: Build debug APK
-    #   run: ./gradlew androidApp:packageDebug
-    - name: Build release APK
-      run: ./gradlew androidApp:packageRelease
+    - name: Build debug APK
+      run: ./gradlew androidApp:packageDebug
+    # - name: Build release APK
+    #   run: ./gradlew androidApp:packageRelease
 
     # - name: Upload universal debug APK artifact
     #   uses: actions/upload-artifact@v3
@@ -39,8 +39,8 @@ jobs:
     #     path: androidApp/build/outputs/apk/release/*.apk
 
     - name: Rename APK files
-      run: mv androidApp/build/outputs/apk/release/*.apk androidApp/build/outputs/apk/release/spmp-nightly-android-universal.apk 
-        # mv androidApp/build/outputs/apk/debug/*.apk androidApp/build/outputs/apk/debug/spmp-nightly-android-universal-debug.apk 
+      run: mv androidApp/build/outputs/apk/debug/*.apk androidApp/build/outputs/apk/debug/spmp-nightly-android-universal-debug.apk 
+      #mv androidApp/build/outputs/apk/release/*.apk androidApp/build/outputs/apk/release/spmp-nightly-android-universal.apk 
 
     - name: Get current date and time
       id: date
@@ -52,7 +52,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: nightly-latest
         name: Nightly ${{ steps.date.outputs.date }}
-        files: androidApp/build/outputs/apk/release/spmp-nightly-android-universal.apk
+        files: androidApp/build/outputs/apk/debug/spmp-nightly-android-universal-debug.apk
 
     - name: Get short commit hash
       run: echo "COMMIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
