--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -23,24 +23,25 @@ jobs:
 
     - name: Build debug APK
       run: ./gradlew androidApp:packageDebug
-    # - name: Build release APK
-    #   run: ./gradlew androidApp:packageRelease
+    - name: Build release APK
+      run: ./gradlew androidApp:packageRelease
 
-    # - name: Upload universal debug APK artifact
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: spmp-android-debug
-    #     path: androidApp/build/outputs/apk/debug/*.apk
+    - name: Upload universal debug APK artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: spmp-android-debug
+        path: androidApp/build/outputs/apk/debug/*.apk
 
-    # - name: Upload universal release APK artifact
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: spmp-android-release
-    #     path: androidApp/build/outputs/apk/release/*.apk
+    - name: Upload universal release APK artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: spmp-android-release
+        path: androidApp/build/outputs/apk/release/*.apk
 
     - name: Rename APK files
-      run: mv androidApp/build/outputs/apk/debug/*.apk androidApp/build/outputs/apk/debug/spmp-nightly-android-universal-debug.apk 
-      #mv androidApp/build/outputs/apk/release/*.apk androidApp/build/outputs/apk/release/spmp-nightly-android-universal.apk 
+      run: |
+        mv androidApp/build/outputs/apk/release/*.apk androidApp/build/outputs/apk/release/spmp-nightly-android-universal.apk 
+        mv androidApp/build/outputs/apk/debug/*.apk androidApp/build/outputs/apk/debug/spmp-nightly-android-universal-debug.apk 
 
     - name: Get current date and time
       id: date
@@ -52,7 +53,9 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: nightly-latest
         name: Nightly ${{ steps.date.outputs.date }}
-        files: androidApp/build/outputs/apk/debug/spmp-nightly-android-universal-debug.apk
+        files: |
+          androidApp/build/outputs/apk/release/spmp-nightly-android-universal.apk 
+          androidApp/build/outputs/apk/debug/spmp-nightly-android-universal-debug.apk
         clear_attachments: false
 
     - name: Get short commit hash
