--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -37,3 +37,20 @@ jobs:
       with:
         name: spmp-linux-release
         path: desktopApp/build/outputs/*.tar.gz
+
+    - name: Rename output file
+      run: mv desktopApp/build/outputs/*.tar.gz desktopApp/build/outputs/spmp-nightly-linux-x86_64.tar.gz
+
+    - name: Get current date and time
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S')"
+
+    - name: Update nightly release
+      uses: mini-bomba/create-github-release@v1.1.3
+      if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tag: nightly-latest
+        name: Nightly ${{ steps.date.outputs.date }}
+        files: desktopApp/build/outputs/spmp-nightly-linux-x86_64.tar.gz
+        clear_attachments: false
