--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -17,9 +17,17 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
-    - uses: cachix/install-nix-action@v27
-    - uses: DeterminateSystems/magic-nix-cache-action@main
-    - uses: nicknovitski/nix-develop@v1
+
+    - name: Set up JDKs
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: |
+          22
+          21
+
+    - name: Set up Gradle
+      uses: gradle/gradle-build-action@v3
 
     - name: Build debug APK
       run: ./gradlew androidApp:packageDebug
