Fix Android workflow build

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -18,16 +18,11 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Set up JDKs
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: |
-          22
-          21
-
-    - name: Set up Gradle
-      uses: gradle/gradle-build-action@v3
+        java-version: 22
 
     - name: Build debug APK
       run: ./gradlew androidApp:packageDebug
